@@ -4,17 +4,18 @@
 
 ======== Code ==========================================================
 
+(-) Errors in levels
+    (-) Non-fatal error in level is also reported to the player, not only 
+        to the console and log
+        (-) show error message
+        (-) option 'skip to next level' works
+        (-) error message can be very long and there can be multiple ones:
+            message space should be scrollable
+
 (-) Level data (in location.xml)
     (-) Possibility to define starting point for each viking separately
         (prototyping levels started in TestsCampaign!)
     (-) Possibility to choose which viking will be active on level start
-
-(-) Errors in levels
-    (-) exception inside location script can't break down whole application -
-        error is shown and player can choose if he wants to play the damaged
-        level, skip to the next one or return to menu.
-    (-) Non-fatal error in level is also reported to the player, not only 
-        to the console and log
 
 (-) Find new official font instead of Adlibn
 
